# API

./: .gitattributes  .gitignore  README.md  audit_cepages.csv  audit_cepages_va.csv  requirements.txt  sommelier.db  tree.txt  wine_colors.json  wine_colors_va.json
app/: 1_prepare.py  2_2_train.py  3_1_test_fast.py  api.py  database.py  models.py  predict.py
automl/: README.md  pyproject.toml  requirements.txt
automl/automl/: _config.py
automl/automl.egg-info/: PKG-INFO  SOURCES.txt
automl/automl/automl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
automl/automl/classification/: __init__.py  _base.py  stable.py
automl/automl/core/: evaluator.py  predictor.py  runner.py  trainer.py
automl/automl/regression/: stable.py  stable.py.save
automl/automl/utils/: optuna.py
automl/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
automl/catboost_info/learn/: events.out.tfevents
automl/catboost_info/test/: events.out.tfevents
automl/checkpoints/: best_model_multi-classification_stable.pkl
automl/logs/: automl_stable_log.txt  checkpoint_log.txt  classification_stable_log.txt  clean_log.txt  detection_log.txt  predict_log.txt  runner_stable_log.txt
automl/results/: results_stable.pkl
data/: .~lock.audit_cepages.csv#  .~lock.audit_vocabulary.csv#  audit_cepages.csv  audit_vocabulary.csv  data_train.csv  keywords_list.pkl  wine_colors.json  wines_db_full.csv
python/: 1_prepare.py  2_1_train_recom.py  2_2_train.py  2_train.py  3_1_test_fast.py  3_1_test_fast.py.save  3_1_train_recom.py  4_audit.py  (+10 more)
(+27 files in other folders)
