[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automl"
version = "0.1.0"
description = "AutoML pipeline for classification and regression"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Vanessa", email = "vanessa.antivackis.etu@univ-lemans.fr"}
]
keywords = ["automl", "machine-learning", "sklearn", "optuna"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "scikit-learn>=1.0",
    "optuna>=3.0",
    "scipy>=1.7",
    "xgboost>=1.5",
    "lightgbm>=3.3",
    "catboost>=1.0",
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]

[project.scripts]
automl-results = "automl.core.evaluator:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["automl*"]